force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/Emergency_Dispatch_Wizard_Setttings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Emergency Dispatch Wizard Setttings</label>
</CustomObject>