force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Access_EDW_Outside_Cutoff_Time_PS_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_EDW_Outside_Cutoff_Time_PS_Id__c</fullName>
    <label>Access EDW Outside Cutoff Time PS Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>