force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Activate_Emergency_Only_Cannot_Complete__c.field-meta.xml
<CustomField>
    <fullName>Activate_Emergency_Only_Cannot_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is used to control if the auto Cannot Complete logic is for Emergency Work Orders only.</inlineHelpText>
    <label>Activate Emergency Only Cannot Complete</label>
    <type>Checkbox</type>
</CustomField>