force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Activate_Warranty_Logic__c.field-meta.xml
<CustomField>
    <fullName>Activate_Warranty_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If TRUE, Warranties will start to be gathered from the Order&apos;s related Account and used to apply $0 prices if applicable.</inlineHelpText>
    <label>Activate Warranty Logic</label>
    <type>Checkbox</type>
</CustomField>