force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Apex_Batch_Job_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Apex_Batch_Job_Completed_Status__c</fullName>
    <label>Apex Batch Job Completed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>