force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Customer_Ticket_Minimum_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_Minimum_Business_Days__c</fullName>
    <label>Customer Ticket Minimum Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>