force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Customer_Ticket_Origin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_Origin__c</fullName>
    <label>Customer Ticket Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>