force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Customer_Ticket_Subject__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ticket_Subject__c</fullName>
    <label>Customer Ticket Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>