force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Default_Number_of_Resources_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Number_of_Resources_Value__c</fullName>
    <label>Default Number of Resources Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>