force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Default_Scheduling_Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Scheduling_Policy_Id__c</fullName>
    <inlineHelpText>The Id of the default Scheduling Policy for Pest Emergency Service Appointments</inlineHelpText>
    <label>Default Scheduling Policy Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>