force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Maximum_Number_of_Resources__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Resources__c</fullName>
    <inlineHelpText>The maximum number of resources a user can specify on a Work Order</inlineHelpText>
    <label>Maximum Number of Resources</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>