force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Number_of_Days_to_Limit_Access__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Limit_Access__c</fullName>
    <label>Number of Days to Limit Access</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>