force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Order_Item_Batch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Batch_Threshold__c</fullName>
    <inlineHelpText>The number of records being processed in the Emergency Dispatch Wizard before a batch class is required to handle the volume of Order Product records. The purpose of batching is to guard against SOQL query limits.</inlineHelpText>
    <label>Order Item Batch Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>