force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <inlineHelpText>The name of the Order for Orders created in the Emergency Dispatch Wizard</inlineHelpText>
    <label>Order Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>