force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Pagination_Limit__c.field-meta.xml
<CustomField>
    <fullName>Pagination_Limit__c</fullName>
    <label>Pagination Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>