force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/PO_Required_for_Closing_Work_Order_Error__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_for_Closing_Work_Order_Error__c</fullName>
    <label>PO Required for Closing Work Order Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>