force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Service_Appointment_Minimum_Duration__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Minimum_Duration__c</fullName>
    <label>Service Appointment Minimum Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>