force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/SSRS_Multi_Res_Pest_Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>SSRS_Multi_Res_Pest_Skill_Id__c</fullName>
    <label>SSRS-Multi Res Pest Skill Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>