force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/SSRS_Pest_Commercial_Skill_Id__c.field-meta.xml
<CustomField>
    <fullName>SSRS_Pest_Commercial_Skill_Id__c</fullName>
    <label>SSRS-Pest-Commercial Skill Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>