force-app/main/default/objects/Emergency_Dispatch_Wizard_Setttings__c/fields/Work_Order_Multi_Res_Advance_Days__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Multi_Res_Advance_Days__c</fullName>
    <label>Work Order Multi-Res Advance Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>